index.css
:root {
  --outer-circle-width: 198px;
  --outer-circle-height: 203px;
  --inner-circle-width: 152px;
  --inner-circle-height: 152px;
  --icon-width: 73px;
  --icon-height: 86px;
}

*,
body,
html {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

body,
html {
  width: 100%;
  height: 100%;
  background: radial-gradient(
    134.34% 134.34% at 50% 0%,
    #1f3757 0%,
    #131537 100%
  );
}

.container {
  display: flex;
}

.main {
  height: 100%;
  padding: 41px 38px 35px 38px;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.arena-wrapper {
  justify-content: center;
  align-items: center;
  margin-top: 64px;
  gap: 72px;
}

.choice {
  flex-direction: column;
  gap: 63px;
  max-height: 395px;
  justify-content: space-between;
}

.choice-title {
  font-family: "Barlow Semi Condensed";
  font-weight: 700;
  font-size: 24px;
  line-height: 32px;
  letter-spacing: 3px;
  color: #ffffff;
  text-align: center;
}

.outer-circle {
  height: var(--outer-circle-height);
  width: var(--outer-circle-width);
  border-radius: 50%;
  position: relative;
  transition: transform 0.1s ease;
}

.outer-circle:active {
  transform: scale(1.1);
}

.inner-circle {
  height: var(--inner-circle-height);
  width: var(--inner-circle-width);
  position: absolute;
  border-radius: 50%;
  background-color: #dddddd;
  box-shadow: inset 0px 8px #babfd4;
  top: calc(50%);
  left: calc(50%);
  transform: translate(-50%, -50%);
}

.thickness-paper {
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 50%;
  box-shadow: inset 0px -9px #2a45c2;
}
.thickness-scissors {
  position: relative;
  width: 100%;
  height: 100%;
  box-shadow: inset 0px -9px #c76c1b;
  border-radius: 50%;
}
.thickness-rock {
  width: 100%;
  height: 100%;
  position: relative;
  box-shadow: inset 0px -9px #9d1634;
  border-radius: 50%;
}

.paper {
  position: absolute;
  background-color: #5873f5;
  top: 0px;
  left: 0px;
}

.scissors {
  position: absolute;
  background-color: #eb9f0e;
  top: 0px;
  right: 0px;
}

.rock {
  position: absolute;
  background-color: #db2e4d;
  bottom: 0px;
}

.paper-chosen {
  background-color: #5873f5;
}

.scissors-chosen {
  background-color: #eb9f0e;
}

.rock-chosen {
  background-color: #db2e4d;
  box-shadow: inset 0px -9px #9d1634;
}

.title-score {
  background-color: transparent;
  justify-content: space-between;
  align-items: center;
  border: solid 3px #5e6a81;
  width: 700px;
  border-radius: 20px;
  padding: 20px 25px 20px 33px;
}

.title {
  align-items: center;
  color: #ffffff;
  font-weight: 700;
  font-size: 40px;
  width: 155.48px;
  line-height: 0.95;
  font-family: "Barlow Semi Condensed", sans-serif;
}

.score {
  width: 150px;
  height: 114px;
  left: 859px;
  top: 66px;
  background: linear-gradient(0deg, #f3f3f3 0%, #ffffff 100%);
  box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.196706);
  border-radius: 8px;
  padding-top: 16px;
  padding-bottom: 16px;
}

.score-text {
  height: 19px;
  font-family: "Barlow Semi Condensed", sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 16px;
  line-height: 19px;
  letter-spacing: 2.5px;
  color: #2a45c2;
  text-align: center;
}

.score-value {
  height: 64px;
  font-family: "Barlow Semi Condensed", sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 64px;
  line-height: 64px;
  text-align: center;
  color: #565468;
}

.button-wrapper {
  width: 100%;
  justify-content: flex-end;
  margin-top: auto;
}

.rules-button:hover {
  background-color: #ffffff;
  color: #3b4262;
}

.rules-button {
  padding: 11px 36px 10px 37px;
  color: #ffffff;
  background-color: transparent;
  border: solid 1px #ffffff;
  border-radius: 8px;
  font-size: 16px;
  letter-spacing: 2.5px;
  line-height: 19px;
  font-weight: 600;
  font-family: "Barlow Semi Condensed", sans-serif;
}

.arena {
  justify-content: center;
  align-items: center;
  width: 476px;
  height: 430px;
  padding: 99.5px 94.5px 76.5px 94.5px;
  position: relative;
}

.icon {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.pulse {
  height: 100%;
  width: 100%;
  border-radius: 100%;
  transition: box-shadow 0.3s ease;
}

.start:hover {
  cursor: pointer;
  box-shadow: 0 0 0 27px rgba(255, 255, 255, 0.05);
}

.win {
  cursor: pointer;
  box-shadow: 0 0 0 65px rgba(255, 255, 255, 0.05),
    0 0 0 130px rgba(255, 255, 255, 0.05), 0 0 0 195px rgba(255, 255, 255, 0.05);
}

.game-over {
  pointer-events: none;
}

.bg-model {
  height: 100%;
  width: 100%;
  background-color: rgba(0, 0, 0, 0.7);
  position: absolute;
  top: 0;
}

.rules-popup {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 400px;
  height: 415px;
  background: #ffffff;
  box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.196706);
  border-radius: 8px;
}

.hidden {
  display: none;
}

.popup-top {
  padding: 32px 32px 31.91px 32px;
  justify-content: space-between;
}

.popup-text {
  color: #3b4262;
  font-family: "Barlow Semi Condensed", sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 32px;
  line-height: 32px;
}

.cross-img:hover {
  filter: invert(0%) sepia(84%) saturate(7500%) hue-rotate(328deg)
    brightness(114%) contrast(114%);
}

.popup-bottom {
  padding-top: 16px;
  padding-bottom: 32px;
  justify-content: center;
  align-items: center;
}

.result-play-again {
  flex-direction: column;
  justify-content: space-between;
  gap: 16px;
}
.result {
  font-family: "Barlow Semi Condensed";
  font-style: normal;
  font-weight: 700;
  font-size: 56px;
  line-height: 67px;
  text-align: center;
  color: #ffffff;
  text-shadow: 0px 3px 3px rgba(0, 0, 0, 0.196706);
}

.btn-play-again {
  display: block;
  font-family: "Barlow Semi Condensed";
  font-style: normal;
  border-style: none;
  font-weight: 600;
  font-size: 16px;
  line-height: 19px;
  letter-spacing: 2.5px;
  color: #3b4262;
  padding: 15px 62px 14px 60px;
  background: linear-gradient(0deg, #f3f3f3 0%, #ffffff 100%);
  box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.196706);
  border-radius: 8px;
  text-align: center;
}

.btn-play-again:hover {
  cursor: pointer;
  color: #db2e4d;
}

.oc-big {
  width: calc(var(--outer-circle-width) * 1.48);
  height: calc(var(--outer-circle-height) * 1.48);
}

.ic-big {
  width: calc(var(--inner-circle-width) * 1.48);
  height: calc(var(--inner-circle-height) * 1.48);
}

.i-big {
  width: calc(var(--icon-width) * 1.48);
  height: calc(var(--icon-height) * 1.48);
}

